fix(price): fix truncate

--- a/src/app/components/cards/cards-info/cards-info.component.scss
+++ b/src/app/components/cards/cards-info/cards-info.component.scss
@@ -7,5 +7,5 @@
 }
 
 .cards-info__title {
-  height: 42px;
+  height: 33px;
 }
