--- a/src/app/components/price/price.component.scss
+++ b/src/app/components/price/price.component.scss
@@ -1,5 +1,9 @@
 :host { display: contents; }
 
+.price {
+  padding-top: 8px;
+}
+
 .price__decor {
   font-size: 12px;
 }
